--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* Reset and base styles */
+
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #d7e3f4;
@@ -16,7 +16,7 @@ body {
     letter-spacing: 1px;
   }
   
-  /* Optional subtitle styling */
+  /* subtitle styling */
   .subtitle {
     text-align: center;
     font-size: 1.1rem;
